--- a/src/ToDo/Scripts/tsconfig.json
+++ b/src/ToDo/Scripts/tsconfig.json
@@ -4,7 +4,8 @@
     "noEmitOnError": true,
     "removeComments": false,
     "sourceMap": true,
-    "target": "es6"
+    "target": "es6",
+    "lib": ["DOM"]
   },
   "compileOnSave": true,
   "exclude": [
