--- a/src/ToDo/package.json
+++ b/src/ToDo/package.json
@@ -10,7 +10,8 @@
     "del": "5.1.0",
     "@fortawesome/fontawesome-free": "5.13.0",
     "focus-trap": "5.1.0",
-    "requirejs": "2.3.6"
+    "requirejs": "2.3.6",
+    "typescript-collections": "1.3.3"
   },
   "dependencies": {}
 }
